# i3dr_cuda_memory

./: CMakeLists.txt
src/: cudaMem.cu  mem.cu
